--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todos",
+  "name": "todo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,19 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core.js": "^0.4.2",
+    "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.4.4",
+    "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "sass": "^1.32.7",
+    "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
+    "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "~2.1.0",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
